# adblockpluscore

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitlab-pages.yml  .hgignore  .hgtags  .jsdoc.conf  .npmignore  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  FILTERS_SPEC.md  README.md  RELEASE_NOTES.md  appveyor.yml  benchmark.js  browsertests.js  chromium_process.js  compile  dependencies  generate_docs.py  meson.build  meson_options.txt  minify.js  package-lock.json  package.json  run_tests.py  test_runner.js  test_runner.mjs  test_wrapper.js
.github/: PULL_REQUEST_TEMPLATE.md
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: bug.md  change.md  feature.md  spike.md  story.md  task.md
.gitlab/merge_request_templates/: draft_merge_request_template.md  merge_request_template.md
.travis/: Dockerfile  activate-nodejs.sh  docker-run.sh  prepare-docker.sh  prepare-emscripten.sh  prepare-ninja.sh  travis-before_script.sh  travis-install.sh  travis-script.sh
benchmark/: benchmark-entrypoint.sh  benchmark.Dockerfile  benchmarkEntrypoint.sh  benchmarkThresholds.json  benchmark_thresholds.json  compare-results.js  compareResults.js  extendHistoricalData.js  extendHistoricalData.sh  fetchAndExtendHistoricalData.sh  helpers.js  listChecker.js  slowlist.json  tempresults.json  unitlist.json
chrome/content/: .eslintrc.json  cssProperties.js  elemHideEmulation.js
chrome/content/ui/: subscriptions.xml
compiled/: ActiveFilter.cpp  ActiveFilter.h  CSSPropertyFilter.cpp  CSSPropertyFilter.h  CommentFilter.cpp  CommentFilter.h  ElemHide.cpp  ElemHide.h  ElemHideBase.cpp  ElemHideBase.h  ElemHideEmulation.cpp  ElemHideEmulation.h  ElemHideEmulationFilter.cpp  ElemHideEmulationFilter.h  ElemHideException.cpp  ElemHideException.h  ElemHideFilter.cpp  ElemHideFilter.h  Filter.cpp  Filter.h  FilterNotifier.cpp  FilterNotifier.h  IntMap.h  InvalidFilter.cpp  Map.h  RegExpFilter.cpp  RegExpFilter.h  String.cpp  String.h  StringMap.h  StringScanner.h  Utils.cpp  Utils.h  WhitelistFilter.cpp  base.h  bindings.cpp  bindings.ipp  debug.h  intrusive_ptr.h  library.cpp  (+5 more)
compiled/bindings/: generator.cpp  generator.h  library.h  library.js  main.cpp  runtime.h  runtime_utils.cpp
compiled/filter/: ActiveFilter.cpp  ActiveFilter.h  BlockingFilter.cpp  BlockingFilter.h  CommentFilter.cpp  CommentFilter.h  ElemHideBase.cpp  ElemHideBase.h  ElemHideEmulationFilter.cpp  ElemHideEmulationFilter.h  ElemHideException.cpp  ElemHideException.h  ElemHideFilter.cpp  ElemHideFilter.h  Filter.cpp  Filter.h  InvalidFilter.cpp  InvalidFilter.h  RegExpFilter.cpp  RegExpFilter.h  WhitelistFilter.cpp  WhitelistFilter.h
compiled/storage/: FilterStorage.cpp  FilterStorage.h
compiled/subscription/: DownloadableSubscription.cpp  DownloadableSubscription.h  Subscription.cpp  Subscription.h  UserDefinedSubscription.cpp  UserDefinedSubscription.h
data/: publicSuffixList.js  publicSuffixList.json  resources.js  resources.json  subscriptions.json
data/resources/: index.json
docs/: CODE_STYLE.md  prefs.md  recommendations.md
lib/: .eslintrc.json  analytics.js  antiadblockInit.js  caching.js  common.js  contentTypes.js  coreUtils.js  cssRules.js  domain.js  downloader.js  elemHide.js  elemHideEmulation.js  elemHideExceptions.js  events.js  features.js  filterClasses.js  filterClassesNew.js  filterEngine.js  filterListener.js  filterMeta.js  filterNotifier.js  filterState.js  filterStorage.js  filtersByDomain.js  index.js  iniParser.js  jsbn.js  matcher.js  ml.js  notification.js  notifications.js  patterns.js  polyfill.js  profiler.js  recommendations.js  rsa.js  rusha.js  scheduler.js  snippets.js  subscriptionClasses.js  (+6 more)
lib/content/: elemHideEmulation.js  injectedSnippets.js  isolatedSnippets.js  snippets.js
lib/data/mlHideIfGraphMatches/: model.json
lib/dnr/: index.js  rules.js
lib/filters/: index.js  lists.js
lib/typedObjects/: arrayTypes.js  objectTypes.js  primitiveTypes.js  references.js  stringType.js  utils.js
scripts/: convertSubscriptions.js  fetchSubscriptions.js  generateSubscriptionsFragment.js  mergeSubscriptions.js  text2dnr.js  updateResources.js  updateSubscriptions.js  updatepsl.js  utils.js
test/: .eslintrc.json  _common.js  _test-utils.js  analytics.js  benchmark.js  caching.js  common.js  contentTypes.js  coreUtils.js  cssRules.js  dnr.js  domain.js  domainRestrictions.js  downloader.js  elemHide.js  elemHideEmulation.js  events.js  filterClasses.js  filterEngine.js  filterListener.js  filterNotifier.js  filterState.js  filterStorage.js  filterStorage_readwrite.js  filters.js  filtersByDomain.js  index.html  iniParser.js  matcher.js  ml.js  notification.js  notifications.js  patterns.js  recommendations.js  regexpFilters_matching.js  rsa.js  signatures.js  snippets.js  subscriptionClasses.js  synchronizer.js  (+4 more)
test/browser/: .eslintrc.json  _bootstrap.js  _utils.js  elemHide.js  elemHideEmulation.html  elemHideEmulation.js  snippets.js
test/compiled/: Filter.cpp  RegExp.cpp  String.cpp  StringMap.cpp  abptest.cpp  library.cpp  user-config-test-abp-utf8-string.h  user-config-test-namespace.h
test/data/: filters.txt  invalid_filters.txt  patterns.ini  punycode_filters.txt  regex_filters.txt  v3_index.json
test/dockerfiles/: extension.Dockerfile
test/runners/: chromium_download.js  chromium_download.mjs  chromium_process.js  chromium_process.mjs  chromium_remote_process.js  chromium_remote_process.mjs  download.js  download.mjs  edge_process.js  firefox_download.js  firefox_download.mjs  firefox_process.js  firefox_process.mjs  webdriver.js  webdriver.mjs
test/scripts/: .eslintrc.json  fetchSubscriptions.js  generateSubscriptionsFragment.js  mergeSubscriptions.js  text2dnr.js  updateSubscriptions.js
test/stub-modules/: info.js  io.js  prefs.js  utils.js
test/tests/: typedObjects.js
test/webcrypto/: index.js  jsbn.js  rusha.js
